docs/style.css
/** {
	background-color: 
}*/

body {
	align-content: center;
	max-width: 700px;
	margin: auto;

	padding: 20px;
	padding-bottom: 50px;
} 

h1, h2, h3, h4, p, ul, a {
	font-family: -apple-system, Helvetica, Arial, sans-serif;
}

h1 {
	font-size: 46pt;
	margin-top: 100px;
	margin-bottom: 0px;
	/*text-align: center;*/
}

h2 {
	font-size: 24pt;
	margin-top: 50px;
	margin-bottom: 0px;
}

p, h3, ul {
	font-size: 12pt;
	line-height: 140%;
}

img {
  border: 1px solid silver;
}

/*---------------------------------*/
.author {
	background-color: bisque;
	padding: 20px;
	border-radius: 30px;
	margin-top: 20px;
}

.author img {
	clip-path: circle(25px at center);
	width: 50px;
	float: left;
	padding: 5px;
	margin-right: 10px;
}

.author p {
	line-height: 100%;
	margin: 10px;
	padding-left: 70px;
}

/*---------------------------------*/

.content {
	margin-top: 50px;
	margin-bottom: 50px
}

.content img {
	float: left;
	width: 300px;
	height: 400px;
	margin-right: 50px;
}

.context text {
	display: block;
}

.image-gallery img {
	width: 32%
}



/*---------------------------------*/
.highlight {
	margin-top: 50px;

	padding-top: 5px;
	padding-bottom: 50px;

	margin-left: -100px;
	padding-left: 100px;

	margin-right: -100px;
	padding-right: 100px;
}


#demo {
	background-color: bisque;
}

#demo > h2 {
	color: darkred;
}





/* Course */

#course {
	background-color: #6DFFDC;
}

#course > h2 {
	color: darkslategray
}

iframe {
	margin-top: 20px;
}




/*Footer*/

.footer {
	align-content: center;
	max-width: max-content;
	margin: auto;

	margin-top: 100px;
}

/*---------------------------------*/

@media only screen and (min-width: 320px) and (max-width: 768px) {
	h1 {
		font-size: 24pt;
		margin-top: 20px;
	}

	.author img {
		float: none;
	}

	.author p {
		padding-left: 0px;
	}

	.content {
		margin-top: 50px;
		margin-bottom: 20px
	}

	.content img {
		width: 100%;
		height: auto;
		margin-bottom: 40px;
	}

	.image-gallery img {
		width: 48%
	}

	.course {
		padding-top: 5px;
		padding-bottom: 50px;

		margin-left: -20px;
		padding-left: 20px;

		margin-right: -20px;
		padding-right: 20px;
	}

	iframe {
		width: 100%;
		height: auto;
	}
}

@media (prefers-color-scheme: dark) {
  	body {
  		background-color: #222222;
  		color: white;
  	}

  	.author > p {
  		color: black;
  	}

  	.highlight > p {
  		color: black;
  	}

  	a {
  		color: aqua;
	}

  	a:visited {
  		color: DarkCyan;
	}
}

